--- a/content/BlazorBffOpenIDConnect/Server/Pages/Error.cshtml
+++ b/content/BlazorBffOpenIDConnect/Server/Pages/Error.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Blazor.BFF.OpenIddict.Server.Pages.ErrorModel
+@model Blazor.BFF.OpenIDConnect.Server.Pages.ErrorModel
 
 <!DOCTYPE html>
 <html>
