--- a/content/BlazorBffOpenIDConnect/Server/Pages/_Host.cshtml
+++ b/content/BlazorBffOpenIDConnect/Server/Pages/_Host.cshtml
@@ -1,6 +1,6 @@
 ﻿@page "/"
-@namespace Blazor.BFF.OpenIddict.Pages
-@using Blazor.BFF.OpenIddict.Client
+@namespace Blazor.BFF.OpenIDConnect.Pages
+@using Blazor.BFF.OpenIDConnect.Client
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = null;
@@ -11,11 +11,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Blazor OpenIddict Cookie</title>
+    <title>Blazor OpenIDConnect Cookie</title>
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/app.css" rel="stylesheet" />
-    <link href="Blazor.BFF.OpenIddict.Client.styles.css" rel="stylesheet" />
+    <link href="Blazor.BFF.OpenIDConnect.Client.styles.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
 </head>
