--- a/content/BlazorBffOpenIDConnect/Server/Pages/_Host.cshtml
+++ b/content/BlazorBffOpenIDConnect/Server/Pages/_Host.cshtml
@@ -1,6 +1,6 @@
 ﻿@page "/"
-@namespace Blazor.BFF.OpenIDConnect.Pages
-@using Blazor.BFF.OpenIDConnect.Client
+@namespace BlazorBffOpenIDConnect.Pages
+@using BlazorBffOpenIDConnect.Client
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = null;
@@ -15,7 +15,7 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/app.css" rel="stylesheet" />
-    <link href="Blazor.BFF.OpenIDConnect.Client.styles.css" rel="stylesheet" />
+    <link href="BlazorBffOpenIDConnect.Client.styles.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
 </head>
