--- a/content/BlazorBffOpenIDConnect/Client/_Imports.razor
+++ b/content/BlazorBffOpenIDConnect/Client/_Imports.razor
@@ -7,5 +7,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using Blazor.BFF.OpenIDConnect.Client
-@using Blazor.BFF.OpenIDConnect.Client.Shared
+@using BlazorBffOpenIDConnect.Client
+@using BlazorBffOpenIDConnect.Client.Shared
