Introduce AntiforgeryHttpClientFactory and use filescoped namespaces, expression bodies and linq and new dotnet6 program file

--- a/content/BlazorBffOpenIDConnect/Client/_Imports.razor
+++ b/content/BlazorBffOpenIDConnect/Client/_Imports.razor
@@ -9,3 +9,4 @@
 @using Microsoft.JSInterop
 @using BlazorBffOpenIDConnect.Client
 @using BlazorBffOpenIDConnect.Client.Shared
+@using BlazorBffOpenIDConnect.Client.Services
