--- a/content/BlazorBffOpenIDConnect/Client/Pages/DirectApi.razor
+++ b/content/BlazorBffOpenIDConnect/Client/Pages/DirectApi.razor
@@ -1,5 +1,5 @@
 ﻿@page "/directapi"
-@inject IHttpClientFactory httpClientFactory
+@inject IAntiforgeryHttpClientFactory httpClientFactory
 @inject IJSRuntime JSRuntime
 
 <h1>Data from Direct API</h1>
@@ -32,10 +32,7 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        var token = await JSRuntime.InvokeAsync<string>("getAntiForgeryToken");
-
-        var client = httpClientFactory.CreateClient("authorizedClient");
-        client.DefaultRequestHeaders.Add("X-XSRF-TOKEN", token);
+        var client = await httpClientFactory.CreateClientAsync();
 
         apiData = await client.GetFromJsonAsync<string[]>("api/DirectApi");
     }
